syntax = "proto3";

message Book {
	int32 id = 1;
	string title = 2;
	optional string author = 3;
	optional int32 year = 4;
}

message OptionalBook {
	optional Book book = 1;
}

message Books {
	repeated Book books = 1;
}

message BookByIdRequest {
	int32 id = 1;
}

message BookByTitleRequest {
	string title = 1;
}

message PutBookRequest {
	string title = 1;
	optional string author = 2;
	optional int32 year = 3;
}

message PagingRequest {
	int32 pageNumber = 1;
	int32 pageLength = 2;
}

message OptionalPagingRequest {
	optional PagingRequest pagingRequest = 1;
}

service BookService {
	rpc FindById (BookByIdRequest) returns (OptionalBook) {}
	rpc FindByTitle (BookByTitleRequest) returns (Books) {}
	rpc Put (PutBookRequest) returns (Book) {}
	rpc DeleteById (BookByIdRequest) returns (OptionalBook) {}
	rpc ManyBooks (OptionalPagingRequest) returns (Books) {}
}